# chat

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ContactsListView.qml  ContentView.qml  MainPage.qml  README.md  SessionListView.qml  chatlistmodel.cpp  chatlistmodel.h  circlehead.cpp  circlehead.h  comm.cpp  comm.h  icon.rc  main.cpp  main.qml  main.qrc  record.h  single.cpp  single.h  singletontypeexample.cpp  singletontypeexample.h
