cmake_minimum_required(VERSION 3.27)
project(chat)
set(QT_VERSION 6)
set(CMAKE_CXX_SANDARD 20)
set(CMAKE_CXX_SANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
file(GLOB HEAD_FILES ${PROJECT_SOURCE_DIR}/*.h)
file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/*.cpp)
add_executable(${PROJECT_NAME} ${SRC_FILES} ${HEAD_FILES} main.qrc icon.rc)
if (CMAKE_SYSTEM_NAME MATCHES "Linux")
find_package(Qt${QT_VERSION} COMPONENTS Gui Qml Widgets Quick QuickControls2 Network REQUIRED)
target_link_libraries(${PROJECT_NAME} Qt${QT_VERSION}::Gui Qt${QT_VERSION}::Widgets Qt${QT_VERSION}::Qml Qt${QT_VERSION}::Quick Qt${QT_VERSION}::QuickControls2 Qt${QT_VERSION}::Network)
elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
find_package(Qt${QT_VERSION} COMPONENTS Gui Qml Quick QuickControls2 Network REQUIRED)
target_link_libraries(${PROJECT_NAME} Qt${QT_VERSION}::Gui Qt${QT_VERSION}::Qml Qt${QT_VERSION}::Quick Qt${QT_VERSION}::QuickControls2 Qt${QT_VERSION}::Network)
endif()
